--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="reveal">
 
 			<div class="slides">
-				<section class="intro" data-background="images/IMG_3734.JPG" data-transition="zoom">
+				<section class="intro" data-transition="zoom">
 					<h1 style="color: #ffffff;">Build Mobile Apps using Ionic</h1>
 						<h4 style="color: #ffffff;">By</h4>
 						<h5 style="color: #ffffff;">Siddique Hameed</h5>
@@ -67,7 +67,7 @@
                         <i style="color: #ffffff;"><a target="_new" href="http://github.com/siddii">http://github.com/siddii</a></i><br/>
                         <i style="color: #ffffff;"><a target="_new" href="https://www.linkedin.com/in/siddiquehameed">https://www.linkedin.com/in/siddiquehameed</a></i><br/>
                         <br/>
-                        <h6 style="color: #ffffff;">11/19/2015</h6>
+                        <h6>11/19/2015</h6>
 				</section>
 
                 <section data-background="#dddddd">
@@ -83,12 +83,19 @@
                     <h2>What is Ionic ?</h2>
                     <ul>
                         <li class="fragment">Hybrid mobile app development framework</li>
-                        <li class="fragment">Based on the modern Web technologies HTML5, CSS3, etc. that web developers love
+                        <li class="fragment">Based on the modern Web technologies HTML5, CSS3, JavaScript etc. that web developers love
                         </li>
                         <li class="fragment">Built on the shoulders of AngularJS</li>
                         <li class="fragment">Native glue by Apache Cordova</li>
                         <li class="fragment">Visually appealing UI components (Looks very close to Native)</li>
                         <li class="fragment">Performance Obsessed</li>
+                        <li class="fragment">Excellent Scaffolding & CLI support!</li>
+                        <li class="fragment">Angular based Testing Support
+                            <ul>
+                                <li class="fragment">Karma for Unit Tests & Protractor for E2E</li>
+                            </ul>
+                        </li>
+
                     </ul>
                 </section>
 
@@ -103,10 +110,11 @@
                             </ul>
                         </li>
                         <li class="fragment">How many code bases are you going to support?</li>
-                        <li class="fragment">Rapid prototyping?</li>
+                        <li class="fragment">Rapid prototyping - Development & Deployment</li>
                         <li class="fragment">Web is <i>"The First Class Platform"</i></li>
                         <li class="fragment">Web components are easier to customize than Native components</li>
-                        <li class="fragment">WebView has come a long way... even Android's WebView is Chromium based</li>
+                        <li class="fragment">WebView has come a long way... Android's WebView is Chromium based</li>
+                        <li class="fragment">Use your favorite IDE (at least for the most part)!</li>
                     </ul>
 				</section>
 
@@ -146,8 +154,9 @@
                     </ul>
                 </section>
 
-                <section data-background="#dddddd" data-transition="concave">
-                    <h4>Native Plugins - http://ngcordova.com/docs/plugins/</h4>
+                <section data-background="#dddddd">
+                    <h4>Cordova Native Plugins</h4>
+                    <div>http://ngcordova.com/docs/plugins/</div> <br/>
                     <ul>
                         <li class="fragment">Device Motion</li>
                         <li class="fragment">Camera</li>
@@ -158,6 +167,25 @@
                         <li class="fragment">Barcode Scanner</li>
                         <li class="fragment">& more...</li>
                     </ul>
+                </section>
+
+                <section data-background="#dddddd" data-transition="concave">
+                    <h4>Ionic View App</h4>
+                    <img style="width:291px;height:541px;"  src="images/ionic-view-preview-right.png"/>
+                </section>
+
+                <section>
+                    <h5>Ionic Creator</h5>
+                    <ul>
+                        <li>http://usecreator.com & Mobile App </li>
+                    </ul>
+                    <img style="width:835px;height:351px;"  src="images/creator-preview.png"/>
+                </section>
+
+                <section data-background="#dddddd" data-transition="concave">
+                    <h2>Installation</h2>
+                    <pre><code data-trim>
+                        $ npm install -g cordova ionic</code></pre>
                 </section>
 
                 <section data-transition="slide">
