--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@
 
                 <section>
                     <h5>Ionic Creator</h5>
-                    <ul>
-                        <li>http://usecreator.com & Mobile App </li>
-                    </ul>
+                    <div>http://usecreator.com</div>
                     <img style="width:835px;height:351px;"  src="images/creator-preview.png"/>
                 </section>
 
