--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <li class="fragment">Native glue by Apache Cordova</li>
                         <li class="fragment">Visually appealing UI components (Looks very close to Native)</li>
                         <li class="fragment">Performance Obsessed</li>
-                        <li class="fragment">Excellent Scaffolding & CLI support!</li>
+                        <li class="fragment">Excellent Bootstrapping, Scaffolding & CLI support!</li>
                         <li class="fragment">Angular based Testing Support
                             <ul>
                                 <li class="fragment">Karma for Unit Tests & Protractor for E2E</li>
@@ -97,6 +97,10 @@
                         </li>
 
                     </ul>
+                </section>
+
+                <section data-transition="concave">
+                    <img src="images/hybrid-is-better.jpg"/>
                 </section>
 
 
