--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <li class="fragment">Web is <i>"The First Class Platform"</i></li>
                         <li class="fragment">Web components are easier to customize than Native components</li>
                         <li class="fragment">WebView has come a long way... Android's WebView is Chromium based</li>
-                        <li class="fragment">Use your favorite IDE (at least for the most part)!</li>
+                        <li class="fragment">Use your favorite IDE, Editor or whatever (at least for the most part)!</li>
                     </ul>
 				</section>
 
