--- a/index.html
+++ b/index.html
@@ -197,7 +197,12 @@
                 <section>
                     <h3>References</h3>
                     <ul>
-                        <li><a href="http://ionicframework.com/present-ionic/slides/#/1">http://ionicframework.com/present-ionic/slides/#/1</a></li>
+                        <li><a href="http://ionicframework.com/">http://ionicframework.com/</a></li>
+                        <li><a href="http://ionic.io">http://ionic.io</a></li>
+                        <li><a href="http://ionic.io/products/creator">http://ionic.io/products/creator</a></li>
+                        <li><a href="http://ngcordova.com/">http://ngcordova.com/</a></li>
+                        <li><a href="http://ionicons.com/">http://ionicons.com/</a></li>
+                        <li><a href="http://showcase.ionicframework.com/">http://showcase.ionicframework.com/</a></li>
                     </ul>
                 </section>
 
