--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <li class="fragment">Based on the modern Web technologies HTML5, CSS3, JavaScript etc. that web developers love
                         </li>
                         <li class="fragment">Built on the shoulders of AngularJS</li>
-                        <li class="fragment">Native glue by Apache Cordova</li>
+                        <li class="fragment">Native glue by Apache Cordova (formerly PhoneGap)</li>
                         <li class="fragment">Visually appealing UI components (Looks very close to Native)</li>
                         <li class="fragment">Performance Obsessed</li>
                         <li class="fragment">Excellent Bootstrapping, Scaffolding & CLI support!</li>
@@ -117,7 +117,7 @@
                         <li class="fragment">Rapid prototyping - Development & Deployment</li>
                         <li class="fragment">Web is <i>"The First Class Platform"</i></li>
                         <li class="fragment">Web components are easier to customize than Native components</li>
-                        <li class="fragment">WebView has come a long way... Android's WebView is Chromium based</li>
+                        <li class="fragment">WebView has come a long way... Android's WebView is Chromium based.. Yay!</li>
                         <li class="fragment">Use your favorite IDE, Editor or whatever (at least for the most part)!</li>
                     </ul>
 				</section>
