Upated with demo link

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 						<h4 style="color: #ffffff;">By</h4>
 						<h5 style="color: #ffffff;">Siddique Hameed</h5>
                         <i style="color: #ffffff;"><a target="_new" href="http://twitter.com/siddii">@siddii</a></i><br/>
-                        <i style="color: #ffffff;"><a target="_new" href="http://github.com/siddii">http://github.com/siddii</a></i><br/>
-                        <i style="color: #ffffff;"><a target="_new" href="https://www.linkedin.com/in/siddiquehameed">https://www.linkedin.com/in/siddiquehameed</a></i><br/>
+                        <i style="color: #ffffff;"><a target="_new" href="https://github.com/siddii/ionic-talk-demo-11-19-2015">https://github.com/siddii/ionic-talk-demo-11-19-2015</a></i><br/>
                         <br/>
                         <h6>11/19/2015</h6>
 				</section>
