Upated with demo link

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 
                 <section data-transition="slide">
                     <h2>Demo Time!</h2>
+                    <div><a target="_new" href="https://github.com/siddii/ionic-talk-demo-11-19-2015">https://github.com/siddii/ionic-talk-demo-11-19-2015</a></div>
                 </section>
 
                 <section>
